--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "tsconfig": "*",
-    "turbo": "latest"
+    "turbo": "latest",
+    "@types/tailwindcss": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "^3.3.1"
   },
   "name": "init",
   "packageManager": "yarn@1.22.1",
