--- a/apps/project1/tsconfig.json
+++ b/apps/project1/tsconfig.json
@@ -1,25 +1,11 @@
 {
+  "extends": "tsconfig/react-library.json",
+  "include": ["."],
+  "exclude": ["dist", "build", "node_modules", "vite.config.ts"],
   "compilerOptions": {
     "types": ["vite/client"],
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "composite": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
     "paths": {
       "@pages/*": ["./src/pages/*"]
     }
-  },
-  "include": ["src", "../types", "vite.config.ts"]
+  }
 }
