--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1"
+  },
   "devDependencies": {
-    "eslint": "^8.48.0",
     "prettier": "^3.0.3",
     "tsconfig": "*",
     "turbo": "latest",
@@ -15,7 +19,21 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "@babel/core": "^7.20.7",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "typescript": "^4.9.4",
+    "@types/node": "^20.5.2",
+    "eslint": "^8.31.0",
+    "eslint-config-turbo": "^1.10.12",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11"
   },
   "name": "study",
   "packageManager": "yarn@1.22.1",
