--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -9,7 +9,6 @@
   },
   "dependencies": {
     "eslint-config-custom": "*",
-    "tsconfig": "*",
-    "typescript": "^4.5.2"
+    "tsconfig": "*"
   }
 }
